# wire

./: .gitignore  CMakeLists.txt  README.md  viewer_state.ini  wire.md
core/: CMakeLists.txt
core/include/wire/core/: core_state.hpp  entities.hpp  id.hpp  object_store.hpp  types.hpp
core/src/: core_state.cpp  core_state_backbone.cpp  core_state_generation.cpp
core/tests/: core_tests.cpp  test_case_matrix.md
docs/: chat_handoff_checklist.md  codex_shared_context.md  core_model_inventory.md  readme_detail_ja.md  wire.md
viewer/: CMakeLists.txt
viewer/src/: main.cpp
